examples/invalid/DataRepresentationOnMember.idl
// SPDX-License-Identifier: Apache-2.0 OR MIT
// Copyright (c) 2025-2026 naskel.com

struct BadRepMember {
    @data_representation(XCDR1) int32_t x;
};

